# lucy-code

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: settings.local.json
.specify/memory/: constitution.md
docs/: architecture.md  feishu-webhook.md  index.md  plan.schema.json  task.schema.json
docs/plans/: 2026-02-07-feishu-autonomous-dev-loop.md
docs/runbooks/: task-store-prune.md
examples/: feishu_message_event.json  lucy_config.json
scripts/: cleanup_sessions.py  opencode_sdk_bridge.mjs
specs/001-cc-executor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: cli.ts  config.ts  container-ws.ts  errors.ts  http.ts  index.ts  intent.ts  json-utils.ts  logger.ts  metrics.ts  models.ts  orchestrator.ts  plan.ts  policy.ts  state-machine.ts  store.ts  worktree.ts
src/adapters/: index.ts  opencode.ts
src/channels/: feishu-conversation.ts  feishu-core.ts  feishu-longconn.ts  feishu-webhook.ts  feishu.ts  index.ts
test/: cli-options.test.ts  feishu-conversation.test.ts  feishu-longconn.test.ts  feishu-messenger.test.ts  feishu-webhook.test.ts  http.test.ts  json-utils.test.ts  metrics.test.ts  models-event-log.test.ts  opencode-runtime.test.ts  orchestrator.test.ts  plan.test.ts  policy.test.ts  state-machine.test.ts  task-store.test.ts
tests/: test_config.py  test_feishu_adapter.py  test_feishu_webhook.py  test_intent.py  test_opencode_adapter.py  test_orchestrator.py  test_plan_validator.py  test_policy.py  test_state_machine.py  test_worktree.py
(+21 files in other folders)
