[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lucy-orchestrator"
version = "0.1.0"
description = "Feishu-driven OpenCode orchestration service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
lucy-orchestrator = "lucy_orchestrator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
